--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "install-client": "npm install --prefix ./frontend ",
     "client": "npm start --prefix ./frontend",
-    "start": "npm run install-client && npm run client"
+    "start": " npm run client"
   },
   "repository": {
     "type": "git",
