--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
   "bugs": {
     "url": "https://github.com/snickersnasian/ss-emit/issues"
   },
-  "homepage": "https://github.com/snickersnasian/ss-emit#readme"
+  "homepage": "https://github.com/snickersnasian/ss-emit#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^7.0.0",
+    "express": "^4.17.3",
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.2"
+  }
 }
