--- a/frontend/src/testDB/projects.json
+++ b/frontend/src/testDB/projects.json
@@ -1,26 +1,17 @@
 [
     {
         "title": "HR FUTURE",
-        "description": "HR Future – это мир российского рынка труда изнутри. Экскурсии в закрытые офисы лидирующих российских компаний, их атмосфера и честные диалоги с крутыми специалистами и настоящими знатоками своего дела."
+        "description": "HR Future – это мир российского рынка труда изнутри. Экскурсии в закрытые офисы лидирующих российских компаний, их атмосфера и честные диалоги с крутыми специалистами и настоящими знатоками своего дела.",
+        "image": "https://sun9-36.userapi.com/impg/6DgU6SMVAguGBseJY91X5n5zYq50Khty2J1CTg/QyO-uO6v2Gk.jpg?size=1280x1280&quality=95&sign=496b433e0a9127d2953c3a108286607c&type=album"
     },
     {
-        "title": "HR FUTURE",
-        "description": "HR Future – это мир российского рынка труда изнутри. Экскурсии в закрытые офисы лидирующих российских компаний, их атмосфера и честные диалоги с крутыми специалистами и настоящими знатоками своего дела."
+        "title": "БОЛЬШОЕ СЕРДЦЕ",
+        "description": "Мы благотворительная организация «Большое сердце», действующая на базе Института ЭМИТ.",
+        "image": "https://sun9-69.userapi.com/impf/wQ-PDvvYpwVAZFH9GGvH0OSxs2M_MK9hnd629Q/o_K4HW9T_OQ.jpg?size=1194x1194&quality=95&sign=a9a7e0e0d822d46133935b6c25b41c0b&type=album"
     },
     {
-        "title": "HR FUTURE",
-        "description": "HR Future – это мир российского рынка труда изнутри. Экскурсии в закрытые офисы лидирующих российских компаний, их атмосфера и честные диалоги с крутыми специалистами и настоящими знатоками своего дела."
-    },
-    {
-        "title": "HR FUTURE",
-        "description": "HR Future – это мир российского рынка труда изнутри. Экскурсии в закрытые офисы лидирующих российских компаний, их атмосфера и честные диалоги с крутыми специалистами и настоящими знатоками своего дела."
-    },
-    {
-        "title": "HR FUTURE",
-        "description": "HR Future – это мир российского рынка труда изнутри. Экскурсии в закрытые офисы лидирующих российских компаний, их атмосфера и честные диалоги с крутыми специалистами и настоящими знатоками своего дела."
-    },
-    {
-        "title": "HR FUTURE",
-        "description": "HR Future – это мир российского рынка труда изнутри. Экскурсии в закрытые офисы лидирующих российских компаний, их атмосфера и честные диалоги с крутыми специалистами и настоящими знатоками своего дела."
+        "title": "ИНВЕСТИЦИЯ",
+        "description": "Проект «Инвестиция» направлен на организацию встреч с людьми, чей опыт огромен, и, самое главное, полезен.",
+        "image": "https://sun9-15.userapi.com/impg/IlnT-nQYhSal1MYYBzK7sG4UpQYV6ZaLZaKLHw/a38s5mcz4MU.jpg?size=1080x1080&quality=96&sign=88e366e7327f8432be1d13bb3c3402f1&type=album"
     }
 ]
