--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -14,6 +13,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -22,9 +22,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-=======
 
 
 # dependencies
 /node_modules
->>>>>>> 44ed6b0820e03330db739ca6ef4a64ec0be3d338
