--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://emit-ss.herokuapp.com/",
   "browserslist": {
     "production": [
       ">0.2%",
