--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
-  "tabWidth": 2,
+  "singleQuote": false,
+  "arrowParens": "always",
+  "printWidth": 120,
+  "tabWidth": 4,
   "useTabs": false
 }
