--- a/package.json
+++ b/package.json
@@ -1,48 +1,63 @@
 {
-  "name": "ss-emit",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "install-client": "npm install --prefix ./frontend",
-    "client": "npm start --prefix ./frontend",
-    "start": " node app.js",
-    "server": "nodemon app.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\" ",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/snickersnasian/ss-emit.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/snickersnasian/ss-emit/issues"
-  },
-  "homepage": "https://github.com/snickersnasian/ss-emit#readme",
-  "dependencies": {
-    "@emailjs/browser": "^3.7.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.2",
-    "concurrently": "^7.0.0",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "express-validator": "^6.14.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.2",
-    "nodemon": "^2.0.15",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^8.0.4",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "^2.1.3",
-    "redux": "^4.2.0",
-    "ss-emit": "file:..",
-    "web-vitals": "^2.1.2"
-  }
+    "name": "ss-emit",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "install-client": "npm install --prefix ./frontend",
+        "client": "npm start --prefix ./frontend",
+        "start": " node app.js",
+        "server": "nodemon app.js",
+        "dev": "concurrently \"npm run server\" \"npm run client\" ",
+        "heroku-postbuild": "cd frontend && npm install && npm run build",
+        "lint": "eslint  *.js",
+        "lint:fix": "eslint --fix  *.js",
+        "prettier": "npx prettier * --check",
+        "prettier:fix": "npx prettier * --write"
+    },
+    "pre-commit": [
+        "lint",
+        "prettier"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/snickersnasian/ss-emit.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/snickersnasian/ss-emit/issues"
+    },
+    "homepage": "https://github.com/snickersnasian/ss-emit#readme",
+    "dependencies": {
+        "@emailjs/browser": "^3.7.0",
+        "@testing-library/jest-dom": "^5.16.1",
+        "@testing-library/react": "^12.1.2",
+        "@testing-library/user-event": "^13.5.0",
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.2",
+        "concurrently": "^7.0.0",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "express-validator": "^6.14.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.2.2",
+        "nodemon": "^2.0.15",
+        "prettier": "^2.8.4",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-redux": "^8.0.4",
+        "react-router-dom": "^6.2.1",
+        "react-scripts": "^2.1.3",
+        "redux": "^4.2.0",
+        "ss-emit": "file:..",
+        "web-vitals": "^2.1.2"
+    },
+    "devDependencies": {
+        "eslint": "^8.34.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.32.2",
+        "pre-commit": "^1.2.2"
+    }
 }
