--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"lint": "eslint  *.js",
 		"lint:fix": "eslint --fix  *.js",
 		"prettier": "npx prettier * --check",
-		"prettier:fix": "npx prettier * --write --ignore-unknown"
+		"prettier:fix": "npx prettier \"**/*.*\" --write --ignore-unknown"
 	},
 	"pre-commit": [
 		"prettier:fix",
